# ai_auto_analysis

./: README.md  eda.py  modeling.py  result.md
01_bank_da/: main.py  pyproject.toml
